--- a/style/style.css
+++ b/style/style.css
@@ -8,3 +8,68 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.M-size {
+margin: 0px;
+}
+
+  
+@font-face {
+    font-family: MontaukRegular;
+    src: url(../assets/fonts/Montauk-Regular.otf);
+}
+
+@font-face {
+    font-family: MontaukBold;
+    src: url(../assets/fonts/Montauk-Bold.otf);
+}
+
+@font-face {
+    font-family: FugazRegular;
+    src: url(../assets/fonts/FugazOne-Regular.ttf);
+}
+
+@font-face {
+    font-family: FugazOneRegular;
+    src: url(../assets/FugazOne-Regular.ttf);
+}
+
+ p, hr{
+    font-family: MontaukRegular;
+    font-size: 16px;
+    color: #5F002B;
+}
+
+.McardHeading {
+    font-family: FugazOneRegular;
+    font-size: 30px;
+    color: #5F002B;
+    opacity: 100%;
+}
+
+.Mtitle {
+    font-family: FugazOneRegular;
+    font-size: 50px;
+    color: #5F002B;
+    opacity: 100%;
+}
+
+.M-footer-img {
+    width: 100px;
+    height: 31.6;
+}
+
+.M-anchor {
+    font-family: FugazOneRegular;
+    font-size: 20px;
+    color: #5F002B;
+    opacity: 100%;
+}
+
+.M-food-names {
+    font-family: MontaukRegular;
+    font-size: 30px;
+    color: #5F002B;
+}
+
+
