--- a/style/style.css
+++ b/style/style.css
@@ -33,6 +33,9 @@ body{
     background-color: white;
     display: flex;
     justify-content: center;
+    font-family: FugazRegular;
+    font-size: 16px;
+    color:#5F002B;
 }
 
 .AcardText {
@@ -45,4 +48,21 @@ body{
     font-family: FugazRegular;
     font-size: 24px;
     color: #5F002B;
+}
+
+#cateringHeroImage {
+    background-image: url(../assets/cateringHero.jpg);
+    height: 50vh;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.sideImage {
+    max-width: 90%;
+}
+
+.sideText {
+    font-family: MontaukRegular;
+    font-size: 1vw;
+    color: #5F002B
 }
