--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,8 @@ body{
 margin: 0px;
 }
 
+
+
   
 @font-face {
     font-family: MontaukRegular;
@@ -34,6 +36,22 @@ margin: 0px;
     src: url(../assets/FugazOne-Regular.ttf);
 }
 
+
+/* NAVBAR */
+.navbarFont {
+    font-family: FugazRegular;
+    font-size: 16px;
+    color: #5F002B;
+}
+
+
+
+
+
+
+
+
+/* BODY CSS */
 hr{
     font-family: MontaukRegular;
     font-size: 16px;
