--- a/style/style.css
+++ b/style/style.css
@@ -65,7 +65,7 @@ hr {
 }
 
 .AcardText {
-    fong-family: FugazRegular;
+    font-family: FugazRegular;
     font-size: 16px;
     color:#5F002B;
 }
